examples/negative/name_errors/L4/4_duplicate_arrays.ob
MODULE DuplicateArrays;

TYPE MYARRAY = ARRAY 3 OF INTEGER;
     MYARRAY = ARRAY 42 OF INTEGER;

END DuplicateArrays.
